--- a/notebooks/hypothesis_space/Hypothesis_Space_Exp_Compas_Without_Sensitive_Attrs.ipynb
+++ b/notebooks/hypothesis_space/Hypothesis_Space_Exp_Compas_Without_Sensitive_Attrs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 143,
    "id": "248cbed8",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 144,
    "id": "7ec6cd08",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 145,
    "id": "b8cb69f2",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 146,
    "id": "7a9241de",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 147,
    "id": "71d8f24a",
    "metadata": {},
    "outputs": [],
@@ -114,14 +114,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 148,
    "outputs": [
     {
      "data": {
       "text/plain": "                          Dataset_Name              Model_Name  F1_Score  \\\n0  COMPAS_Without_Sensitive_Attributes      LogisticRegression    0.6785   \n1  COMPAS_Without_Sensitive_Attributes  DecisionTreeClassifier    0.6952   \n2  COMPAS_Without_Sensitive_Attributes  RandomForestClassifier    0.6962   \n3  COMPAS_Without_Sensitive_Attributes           XGBClassifier    0.6971   \n4  COMPAS_Without_Sensitive_Attributes    KNeighborsClassifier    0.7056   \n5  COMPAS_Without_Sensitive_Attributes           MLPClassifier    0.6834   \n\n   Accuracy_Score                                  Model_Best_Params  \n0          0.6837  {'C': 1, 'max_iter': 50, 'penalty': 'l2', 'sol...  \n1          0.6989  {'criterion': 'gini', 'max_depth': 20, 'max_fe...  \n2          0.7008  {'max_depth': 4, 'max_features': 0.6, 'min_sam...  \n3          0.7008  {'lambda': 100, 'learning_rate': 0.1, 'max_dep...  \n4          0.7112  {'metric': 'minkowski', 'n_neighbors': 25, 'we...  \n5          0.6875  {'activation': 'relu', 'hidden_layer_sizes': (...  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Dataset_Name</th>\n      <th>Model_Name</th>\n      <th>F1_Score</th>\n      <th>Accuracy_Score</th>\n      <th>Model_Best_Params</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>COMPAS_Without_Sensitive_Attributes</td>\n      <td>LogisticRegression</td>\n      <td>0.6785</td>\n      <td>0.6837</td>\n      <td>{'C': 1, 'max_iter': 50, 'penalty': 'l2', 'sol...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>COMPAS_Without_Sensitive_Attributes</td>\n      <td>DecisionTreeClassifier</td>\n      <td>0.6952</td>\n      <td>0.6989</td>\n      <td>{'criterion': 'gini', 'max_depth': 20, 'max_fe...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>COMPAS_Without_Sensitive_Attributes</td>\n      <td>RandomForestClassifier</td>\n      <td>0.6962</td>\n      <td>0.7008</td>\n      <td>{'max_depth': 4, 'max_features': 0.6, 'min_sam...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>COMPAS_Without_Sensitive_Attributes</td>\n      <td>XGBClassifier</td>\n      <td>0.6971</td>\n      <td>0.7008</td>\n      <td>{'lambda': 100, 'learning_rate': 0.1, 'max_dep...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>COMPAS_Without_Sensitive_Attributes</td>\n      <td>KNeighborsClassifier</td>\n      <td>0.7056</td>\n      <td>0.7112</td>\n      <td>{'metric': 'minkowski', 'n_neighbors': 25, 'we...</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>COMPAS_Without_Sensitive_Attributes</td>\n      <td>MLPClassifier</td>\n      <td>0.6834</td>\n      <td>0.6875</td>\n      <td>{'activation': 'relu', 'hidden_layer_sizes': (...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 128,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 149,
    "outputs": [],
    "source": [
     "experiment_models_config = create_models_config_from_tuned_params_df(\n",
@@ -150,13 +150,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 150,
    "outputs": [
     {
      "data": {
       "text/plain": "dict_keys(['DecisionTreeClassifier', 'LogisticRegression'])"
      },
-     "execution_count": 130,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 151,
    "id": "3e53fe9a",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
       "text/plain": "   juv_fel_count  juv_misd_count  juv_other_count  priors_count  \\\n0            0.0       -2.340451              1.0    -15.010999   \n1            0.0        0.000000              0.0      0.000000   \n2            0.0        0.000000              0.0      0.000000   \n3            0.0        0.000000              0.0      6.000000   \n4            0.0        0.000000              0.0      7.513697   \n\n   age_cat_25 - 45  age_cat_Greater than 45  age_cat_Less than 25  \\\n0                1                        0                     0   \n1                1                        0                     0   \n2                0                        0                     1   \n3                1                        0                     0   \n4                1                        0                     0   \n\n   c_charge_degree_F  c_charge_degree_M  \n0                  0                  1  \n1                  1                  0  \n2                  1                  0  \n3                  0                  1  \n4                  1                  0  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>juv_fel_count</th>\n      <th>juv_misd_count</th>\n      <th>juv_other_count</th>\n      <th>priors_count</th>\n      <th>age_cat_25 - 45</th>\n      <th>age_cat_Greater than 45</th>\n      <th>age_cat_Less than 25</th>\n      <th>c_charge_degree_F</th>\n      <th>c_charge_degree_M</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.0</td>\n      <td>-2.340451</td>\n      <td>1.0</td>\n      <td>-15.010999</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>1</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>6.000000</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>7.513697</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 131,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 152,
    "id": "2528579c",
    "metadata": {},
    "outputs": [
@@ -216,8 +216,7 @@
      "output_type": "stream",
      "text": [
       "Multiple runs progress:   0%|\u001B[32m          \u001B[0m| 0/2 [00:00<?, ?it/s]\n",
-      "Analyze models in one run:   0%|\u001B[31m          \u001B[0m| 0/2 [00:00<?, ?it/s]\u001B[A\n",
-      "2023-01-26 01:05:26 abstract_overall_variance_analyzer.py INFO    : Start classifiers testing by bootstrap\n"
+      "Analyze models in one run:   0%|\u001B[31m          \u001B[0m| 0/2 [00:00<?, ?it/s]\u001B[A"
      ]
     },
     {
@@ -236,11 +235,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "2023-01-26 01:17:04 abstract_overall_variance_analyzer.py INFO    : Start classifiers testing by bootstrap\n",
       "\n",
       "\n",
-      "Classifiers testing by bootstrap: 100%|\u001B[34m██████████\u001B[0m| 100/100 [00:00<00:00, 163.86it/s]\n",
-      "\n",
-      "2023-01-26 01:05:27 abstract_overall_variance_analyzer.py INFO    : Successfully tested classifiers by bootstrap\n"
+      "Classifiers testing by bootstrap: 100%|\u001B[34m██████████\u001B[0m| 100/100 [00:00<00:00, 183.67it/s]"
      ]
     },
     {
@@ -256,10 +254,10 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "2023-01-26 01:05:31 abstract_overall_variance_analyzer.py INFO    : Successfully computed predict proba metrics\n",
+      "2023-01-26 01:17:04 abstract_overall_variance_analyzer.py INFO    : Successfully tested classifiers by bootstrap\n",
+      "2023-01-26 01:17:07 abstract_overall_variance_analyzer.py INFO    : Successfully computed predict proba metrics\n",
       "\n",
-      "Analyze models in one run:  50%|\u001B[31m█████     \u001B[0m| 1/2 [00:14<00:14, 14.35s/it]\u001B[A\n",
-      "2023-01-26 01:05:41 abstract_overall_variance_analyzer.py INFO    : Start classifiers testing by bootstrap\n"
+      "Analyze models in one run:  50%|\u001B[31m█████     \u001B[0m| 1/2 [00:09<00:09,  9.68s/it]\u001B[A"
      ]
     },
     {
@@ -282,11 +280,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "2023-01-26 01:17:13 abstract_overall_variance_analyzer.py INFO    : Start classifiers testing by bootstrap\n",
       "\n",
       "\n",
-      "Classifiers testing by bootstrap: 100%|\u001B[34m██████████\u001B[0m| 100/100 [00:04<00:00, 21.25it/s]\n",
-      "\n",
-      "2023-01-26 01:05:45 abstract_overall_variance_analyzer.py INFO    : Successfully tested classifiers by bootstrap\n"
+      "Classifiers testing by bootstrap: 100%|\u001B[34m██████████\u001B[0m| 100/100 [00:05<00:00, 18.08it/s]"
      ]
     },
     {
@@ -302,10 +299,11 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "2023-01-26 01:05:49 abstract_overall_variance_analyzer.py INFO    : Successfully computed predict proba metrics\n",
+      "2023-01-26 01:17:19 abstract_overall_variance_analyzer.py INFO    : Successfully tested classifiers by bootstrap\n",
+      "2023-01-26 01:17:21 abstract_overall_variance_analyzer.py INFO    : Successfully computed predict proba metrics\n",
       "\n",
-      "Analyze models in one run: 100%|\u001B[31m██████████\u001B[0m| 2/2 [00:31<00:00, 15.84s/it]\u001B[A\n",
-      "Multiple runs progress:  50%|\u001B[32m█████     \u001B[0m| 1/2 [00:31<00:31, 31.69s/it]"
+      "Analyze models in one run: 100%|\u001B[31m██████████\u001B[0m| 2/2 [00:24<00:00, 12.37s/it]\u001B[A\n",
+      "Multiple runs progress:  50%|\u001B[32m█████     \u001B[0m| 1/2 [00:24<00:24, 24.75s/it]"
      ]
     },
     {
@@ -323,8 +321,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Analyze models in one run:   0%|\u001B[31m          \u001B[0m| 0/2 [00:00<?, ?it/s]\u001B[A\n",
-      "2023-01-26 01:05:58 abstract_overall_variance_analyzer.py INFO    : Start classifiers testing by bootstrap\n"
+      "Analyze models in one run:   0%|\u001B[31m          \u001B[0m| 0/2 [00:00<?, ?it/s]\u001B[A"
      ]
     },
     {
@@ -343,11 +340,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "2023-01-26 01:17:28 abstract_overall_variance_analyzer.py INFO    : Start classifiers testing by bootstrap\n",
       "\n",
       "\n",
-      "Classifiers testing by bootstrap: 100%|\u001B[34m██████████\u001B[0m| 100/100 [00:00<00:00, 200.52it/s]\n",
-      "\n",
-      "2023-01-26 01:05:59 abstract_overall_variance_analyzer.py INFO    : Successfully tested classifiers by bootstrap\n"
+      "Classifiers testing by bootstrap: 100%|\u001B[34m██████████\u001B[0m| 100/100 [00:00<00:00, 216.79it/s]"
      ]
     },
     {
@@ -363,10 +359,10 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "2023-01-26 01:06:02 abstract_overall_variance_analyzer.py INFO    : Successfully computed predict proba metrics\n",
+      "2023-01-26 01:17:29 abstract_overall_variance_analyzer.py INFO    : Successfully tested classifiers by bootstrap\n",
+      "2023-01-26 01:17:31 abstract_overall_variance_analyzer.py INFO    : Successfully computed predict proba metrics\n",
       "\n",
-      "Analyze models in one run:  50%|\u001B[31m█████     \u001B[0m| 1/2 [00:13<00:13, 13.11s/it]\u001B[A\n",
-      "2023-01-26 01:06:11 abstract_overall_variance_analyzer.py INFO    : Start classifiers testing by bootstrap\n"
+      "Analyze models in one run:  50%|\u001B[31m█████     \u001B[0m| 1/2 [00:09<00:09,  9.74s/it]\u001B[A"
      ]
     },
     {
@@ -389,11 +385,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "2023-01-26 01:17:38 abstract_overall_variance_analyzer.py INFO    : Start classifiers testing by bootstrap\n",
       "\n",
       "\n",
-      "Classifiers testing by bootstrap: 100%|\u001B[34m██████████\u001B[0m| 100/100 [00:03<00:00, 27.00it/s]\n",
-      "\n",
-      "2023-01-26 01:06:15 abstract_overall_variance_analyzer.py INFO    : Successfully tested classifiers by bootstrap\n"
+      "Classifiers testing by bootstrap: 100%|\u001B[34m██████████\u001B[0m| 100/100 [00:03<00:00, 31.70it/s]"
      ]
     },
     {
@@ -409,10 +404,11 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "2023-01-26 01:06:18 abstract_overall_variance_analyzer.py INFO    : Successfully computed predict proba metrics\n",
+      "2023-01-26 01:17:41 abstract_overall_variance_analyzer.py INFO    : Successfully tested classifiers by bootstrap\n",
+      "2023-01-26 01:17:44 abstract_overall_variance_analyzer.py INFO    : Successfully computed predict proba metrics\n",
       "\n",
-      "Analyze models in one run: 100%|\u001B[31m██████████\u001B[0m| 2/2 [00:27<00:00, 13.91s/it]\u001B[A\n",
-      "Multiple runs progress: 100%|\u001B[32m██████████\u001B[0m| 2/2 [00:59<00:00, 29.76s/it]"
+      "Analyze models in one run: 100%|\u001B[31m██████████\u001B[0m| 2/2 [00:22<00:00, 11.09s/it]\u001B[A\n",
+      "Multiple runs progress: 100%|\u001B[32m██████████\u001B[0m| 2/2 [00:46<00:00, 23.47s/it]"
      ]
     },
     {
@@ -439,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 152,
    "id": "197eadaa",
    "metadata": {},
    "outputs": [],
